--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- META TAG OG-->
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="dev Hamburguria - A melhor hamburgueria do mercado, com garçom, delivery e atendimento 24h.">
+    <meta property="og:image" content="https://dev-hamburgueria-beta.vercel.app/assetes/hamb-1.png">
+    <meta property="og:description" content="A melhor hamburgueria do mercado">
+    <meta property="og:site-name" content="Devhamburgueria">
+
     <link rel="stylesheet" href="./styles/output.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title >dev Burguer - A melhor Hamburgueria</title>
+    <title >dev Hamburguria - A sua melhor opção </title>
 </head>
 <body>
     <!-- HEADER-->
