--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:description" content="A melhor hamburgueria do mercado">
     <meta property="og:site-name" content="Devhamburgueria">
 
+    <link rel="shortcut icon" href="./assetes/icons.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/output.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
